--- a/src/components/ProductShortcut/ProductShortcut.module.scss
+++ b/src/components/ProductShortcut/ProductShortcut.module.scss
@@ -83,6 +83,7 @@
 
 	.title {
 		font-size: 1.8rem;
+		margin-top: 0.5rem;
 	}
 
 	.colors {
@@ -97,6 +98,6 @@
 
 	.price {
 		font-size: 1.8rem;
-		top: -30px;
+		top: -25px;
 	}
 }
