--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
 .header {
 	color: $pureWhite;
 	.heroImg {
-		@include heroImg("../../assets/headerMobile.webp");
+		@include heroImg("../../assets/headerMobile2.jpg");
 		height: calc(100vh - 379px);
 		min-height: 600px;
 	}
@@ -82,7 +82,7 @@
 @media (min-width: 992px) {
 	.header {
 		.heroImg {
-			background-image: url("../../assets/headerDesktop.webp");
+			background-image: url("../../assets/headerDesktop3.jpg");
 			height: calc(100vh - 157px);
 			min-height: 550px;
 			max-height: 1100px;
