--- a/src/components/Opinions/Opinions.module.scss
+++ b/src/components/Opinions/Opinions.module.scss
@@ -52,7 +52,9 @@
 
 .img {
 	max-width: 100%;
-	height: auto;
+     width: 70px;
+     border-radius: 50%;
+     height: 70px;
 	object-fit: cover;
 }
 
