--- a/src/components/SingleStage/SingleStage.module.scss
+++ b/src/components/SingleStage/SingleStage.module.scss
@@ -2,7 +2,7 @@
 
 .stage {
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
 	padding: 0 3rem;
