--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -109,6 +109,11 @@
 	margin-top: 1.5rem;
 }
 
+.infotextBox {
+	font-weight: 700;
+	margin: 1.6rem 0;
+}
+
 @media (min-width: 992px) {
 	.product {
 		padding: 10.5rem 2rem;
