--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -16,6 +16,11 @@
 
 .bottom {
 	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 0.6rem;
+	justify-content: space-between;
 	text-align: center;
 }
 
@@ -76,6 +81,10 @@
 	}
 }
 
+.linkLinkedin {
+	color: $mainText;
+}
+
 @media (min-width: 992px) {
 	.allLinks {
 		position: static;
@@ -103,6 +112,6 @@
 	.bottom {
 		padding: 1.2rem;
 		padding-right: 2rem;
-		text-align: right;
+		flex-direction: row;
 	}
 }
