--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
 
 .contact {
 	padding: 7.5rem 3rem;
-	min-height: 80vh;
+	min-height: calc(100vh - 351px);
 }
 
 .heading {
@@ -50,7 +50,7 @@
 }
 
 .errorMsg {
-     font-weight: 700;
+	font-weight: 700;
 }
 
 .message {
@@ -77,6 +77,7 @@
 @media (min-width: 992px) {
 	.contact {
 		padding: 10.5rem 2rem;
+		min-height: calc(100vh - 321px);
 	}
 	.form {
 		gap: 3rem;
